--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ Número de casa: `
 },
 
 {name: 'Sistema Corta Gas',
-    body: `Hola, gracias por escribirnos.
+    body: 'Hola, gracias por escribirnos.
 Tu cocina Indurama tiene corta gas: si la llama se apaga, el gas se corta solo. 
 
 Para encender bien:
@@ -263,8 +263,7 @@ Si tu modelo tiene temporizador, al terminar el tiempo se apaga solo.
 - Si hueles gas, cierra la válvula, ventila y no enciendas interruptores.
 
 Si persiste el problema, podemos agendar una revisión. 
-¿Desea agendar una visita técnica?
-  },
+¿Desea agendar una visita técnica?'  },
       
 
       { name: 'Trabaja con nosotros',
