--- a/index.html
+++ b/index.html
@@ -247,8 +247,8 @@ Calle principal y secundaria:
 Número de casa: `
 },
 
-{name: 'Sistema Corta Gas',
-    body: 'Hola, gracias por escribirnos.
+{    name: 'Sistema Corta Gas',
+    body: `Hola, gracias por escribirnos.
 Tu cocina Indurama tiene corta gas: si la llama se apaga, el gas se corta solo. 
 
 Para encender bien:
@@ -263,7 +263,9 @@ Si tu modelo tiene temporizador, al terminar el tiempo se apaga solo.
 - Si hueles gas, cierra la válvula, ventila y no enciendas interruptores.
 
 Si persiste el problema, podemos agendar una revisión. 
-¿Desea agendar una visita técnica?'  },
+¿Desea agendar una visita técnica?`
+  },
+
       
 
       { name: 'Trabaja con nosotros',
