--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 
       
 <span class="pill">Todos los productos comprados en eCommerce e islas, las instalaciones son gratuitas (Si es foráneo tiene costo de movilización)</span>
+<span class="pill">Link manuales: https://usertestcc.github.io/Plantillas/  </span>  
       
     </div>
 
