--- a/index.html
+++ b/index.html
@@ -101,9 +101,12 @@
         <button id="clear" class="btn small ghost">Limpiar</button>
       </div>
 
-      
+      <div class="notices">
 <span class="pill">Todos los productos comprados en eCommerce e islas, las instalaciones son gratuitas (Si es foráneo tiene costo de movilización)</span>
 <span class="pill">Link manuales: https://usertestcc.github.io/Plantillas/  </span>  
+      </div>
+
+
       
     </div>
 
