--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     .field:focus-within{box-shadow:0 0 0 4px var(--ring);border-color:#334155}
     input[type=text]{flex:1;background:transparent;border:0;outline:none;color:var(--ink);font-size:16px;padding:10px}
     .pill{font-size:12px;border:1px solid #334155;border-radius:999px;padding:2px 8px;background:rgba(96,165,250,.12);color:#bfdbfe}
+    .pill + .pill {
+  display: block;       /* fuerza la siguiente pill a ir abajo */
+  margin-top: 8px;      /* separadita */
+  width: fit-content;   /* que no se estire a todo el ancho */
+}
 
     .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(280px,1fr));gap:12px;margin-top:16px}
     .card{background:linear-gradient(180deg,#0e152b,#0b1224);border:1px solid var(--line);border-radius:16px;padding:14px;position:relative}
