--- a/index.html
+++ b/index.html
@@ -106,10 +106,16 @@
         <button id="clear" class="btn small ghost">Limpiar</button>
       </div>
 
-      <div class="notices">
-<span class="pill">Todos los productos comprados en eCommerce e islas, las instalaciones son gratuitas (Si es foráneo tiene costo de movilización)</span>
-<span class="pill">Link manuales: https://usertestcc.github.io/Plantillas/  </span>  
-      </div>
+   <div class="notices">
+  <span class="pill">
+    Todos los productos comprados en eCommerce e islas, las instalaciones son gratuitas
+    (Si es foráneo tiene costo de movilización)
+  </span>
+
+  <a class="pill" href="https://usertestcc.github.io/Plantillas/" target="_blank" rel="noopener noreferrer">
+    Link manuales
+  </a>
+</div> 
 
 
       
