--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   </span>
 
   <a class="pill" href="https://usertestcc.github.io/Plantillas/" target="_blank" rel="noopener noreferrer">
-    Link manuales
+    EGI-755
   </a>
 </div> 
 
