--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
         <button id="clear" class="btn small ghost">Limpiar</button>
       </div>
 
+    <h3> ⚠️ Importante </h3>
+      
    <div class="notices">
   <span class="pill">
     Todos los productos comprados en eCommerce e islas, las instalaciones son gratuitas
