--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <h1> Respuestas Rápidas <span id="count" class="pill"></span></h1>
     <span class="pill">Última actualización 24 Septiembre 9:45 </span>
 
-    <p class="muted">Escribe una palabra (p. ej. <em>garantía</em>, <em>Perú</em>, <em>orden</em>, <em>no contactabilidad</em>).</p>
+    <p class="muted">Escribe una palabra (ejemplo: <em>garantía</em>, <em>Perú</em>, <em>orden</em>, <em>no contactabilidad</em>).</p>
 
     <div class="bar">
       <div class="field">
