--- a/index.html
+++ b/index.html
@@ -2020,7 +2020,7 @@ document.addEventListener('submit', async (e) => {
 
     
   </script>
- <div class="footer simple">
+ <div class="footer simple"> <em> Service Playbook Indurama </h3></em>
  &copy; 2025 — Edisson Fernando Fierro C Versión 1.19.0
    <p>Versión 1.0</p>
 </div>
