--- a/index.html
+++ b/index.html
@@ -2021,7 +2021,7 @@ document.addEventListener('submit', async (e) => {
     
   </script>
  <div class="footer simple">  <h3> <em> Service Playbook Indurama </h3></em>
- &copy; 2025 — Edisson Fernando Fierro C. 
+ &copy; 2025 — Ψ Edisson Fernando Fierro C. 
    <p>Versión 1.0</p>
 </div>
 </body>
