--- a/index.html
+++ b/index.html
@@ -116,7 +116,21 @@
     (Si es foráneo tiene costo de movilización)
 
   </span>
-   
+
+
+     <div style="font-family:system-ui, sans-serif; color:#e5e7eb; padding:4px 8px; line-height:1.5; font-size:12px;">
+  <p style="margin:3px 0;">
+    <strong style="color:#ffffff; font-weight:700;">Maycol Herrera</strong>: 
+    <a href="mailto:mherrerab@indurama.com" style="color:#9fc5ff; text-decoration:none;">mherrerab@indurama.com</a> 
+    Colombia · República Dominicana · El Salvador
+  </p>
+  <p style="margin:3px 0;">
+    <strong style="color:#ffffff; font-weight:700;">Cristina Gárate</strong>:
+    <a href="mailto:cgarate@indurama.com" style="color:#9fc5ff; text-decoration:none;">cgarate@indurama.com</a> 
+    Uruguay · Guatemala · Nicaragua · Panamá · Costa Rica · Bolivia · Honduras
+  </p>
+</div>
+     
 <h4><em>  Manuales </em> </h4>
 
   <a class="pill" href="https://serviandinasaec-my.sharepoint.com/personal/comercial_indurama_consensocorp_com/_layouts/15/onedrive.aspx?e=5%3A0151bfdf092447009da05cb9e260a6d7&sharingv2=true&fromShare=true&at=9&CID=91db18d8%2Ddf2e%2D42ea%2D8f0e%2D1e62a3a0ca79&id=%2Fpersonal%2Fcomercial%5Findurama%5Fconsensocorp%5Fcom%2FDocuments%2FComercial%5F%2FComercial%2FPostVenta%2F1%2E%20%C3%81rea%20T%C3%A9cnica%2FManuales%20de%20usuario%20para%20call%20center&FolderCTID=0x012000D7385C505CFF6840801C15F73BE959EF&view=0" target="_blank" rel="noopener noreferrer">
