--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         body: 'Hola soy ___ , asesor de servicio técnico Indurama, su orden de atención está siendo procesada.' },
 
       { name: 'Saludo fuera de garantía',
-        body: 'Hola soy ___ , asesor de servicio técnico Indurama. Su producto se encuentra fuera de garantía, la visita tendrá un costo aproximado por revisión de $20 a $23 dólares, más los valores por repuestos o mano de obra que nuestro técnico le indique en la visita.\n¿Desea agendar la orden de servicio?' },
+        body: 'Hola soy ___ , asesor de servicio técnico Indurama. Su producto se encuentra fuera de garantía, la visita tendrá un costo de 25 dólares, más los valores por repuestos o mano de obra que nuestro técnico le indique en la visita.\n¿Desea agendar la orden de servicio?' },
 
       //  CONTENIDO  
       { name: 'Orden dentro de garantía',
