--- a/index.html
+++ b/index.html
@@ -107,16 +107,17 @@
         <button id="clear" class="btn small ghost">Limpiar</button>
       </div>
 
-    <h3> ⚠️ Importante </h3>
+    <h4> ⚠️ Importante </h4>
 
 
    <div class="notices">
   <span class="pill">
     Todos los productos comprados en eCommerce e islas, las instalaciones son gratuitas
     (Si es foráneo tiene costo de movilización)
-
   </span>
-
+<span class="pill">
+   Para diferenciar tipo de compra revisar en la factura campo “Observaciones”: si aparece un número de pedido, es venta interna; si no tiene número de pedido (por ejemplo, Venta CC Recreo), es venta externa.
+  </span>
 
      <div style="font-family:system-ui, sans-serif; color:#e5e7eb; padding:4px 8px; line-height:1.5; font-size:12px;">
   <p style="margin:3px 0;">
