--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <body>
   <div class="wrap">
     <h2> Respuestas Rápidas <span id="count" class="pill"> </span> </h2>  
-    <span class="pill">Última actualización 24 Septiembre 9:45 </span>
+    <span class="pill">Última actualización 13 octubre 2025 - 16:23 </span>
 
     <p class="muted">Escribe una palabra (ejemplo: <em>garantía</em>, <em>Perú</em>, <em>orden</em>, <em>no contactabilidad</em>).</p>
 
