--- a/index.html
+++ b/index.html
@@ -286,21 +286,22 @@ Número de casa: `
 },
 
 {    name: 'Sistema Corta Gas',
-    body: `Hola, gracias por escribirnos.
-Tu cocina Indurama tiene corta gas: si la llama se apaga, el gas se corta solo. 
+    body: `Gracias por comunicarse con Indurama. 
 
-Para encender bien:
-1. Presiona y gira la perilla.
-2. Manténla presionada 8 segundos.
-3. Suelta.
-   - Si se apaga, espera 1 minuto y repite. (La llama debe tocar el sensor metálico junto al quemador).
-
-Si tu modelo tiene temporizador, al terminar el tiempo se apaga solo.
-
-⚠️ Seguridad:
-- Si hueles gas, cierra la válvula, ventila y no enciendas interruptores.
-
-Si persiste el problema, podemos agendar una revisión. 
+Su cocina cuenta con un sistema corta gas, si la llama se apaga el gas se corta solo. 
+ 
+Para un encendido correcto: 
+1. Presione y gire la perilla. 
+2. Manténgala presionada durante 8 segundos. 
+3. Suelte la perilla. 
+   - Si se apaga, espere 1 minuto y repita los pasos. (La llama debe tocar el sensor metálico junto al quemador). 
+ 
+Si su modelo tiene temporizador, se apagará solo. 
+ 
+⚠️ Seguridad: 
+- Si detecta olor a gas cierre la válvula, ventile el espacio y no encienda interruptores. 
+ 
+Gustosos agendaremos una revisión y el problema persiste. 
 ¿Desea agendar una visita técnica?`
   },
 
