--- a/index.html
+++ b/index.html
@@ -913,8 +913,27 @@ COLINEAL CORPORATION CIA LTDA`
   body: '<strong>Diferenciación del tipo de compra (factura):</strong><br><br>- Revisar el campo <em>“Observaciones”</em> de la factura.<br>- Si aparece un <strong>número de pedido</strong> ⇒ <strong>Venta interna</strong>.<br>- Si <strong>NO</strong> tiene número de pedido (ej.: “Venta CC Recreo”) ⇒ <strong>Venta externa</strong>.<br><br><strong>Instalaciones gratuitas:</strong><br>- <strong>TODOS</strong> los productos comprados en <strong>eCommerce</strong> e <strong>islas</strong> tienen instalación <strong>gratuita</strong>.<br>- Si es <strong>foráneo</strong>, aplica costo de <strong>movilización</strong>.<br><br><strong>Contactos por país:</strong><br><br><u>Maycol Herrera</u> mherrerab@indurama.com<br>• Colombia · República Dominicana · El Salvador<br><br><u>Cristina Gárate</u> cgarate@indurama.com<br>• Uruguay · Guatemala · Nicaragua · Panamá · Costa Rica · Bolivia · Honduras'
 },
 
+{
+  name: 'Planificadores LATAM',
+  body: '<div style="background:#f8fafc;padding:16px;border-radius:10px;border:1px solid #e2e8f0;font-family:Segoe UI, sans-serif;line-height:1.6;color:#1e293b;">'
+      + '<h3 style="color:#0f172a;margin-top:0;text-align:center;">🌎 DISTRIBUCIÓN DE OPERADORES LATAM </h3>'
+      + '<ul style="list-style:none;padding:0;margin:0;">'
+      + '<li><strong style="color:#2563eb;">Bolivia:</strong> <span style="color:#334155;">Karolina</span></li>'
+      + '<li><strong style="color:#2563eb;">Colombia:</strong> <span style="color:#334155;">Todos / No se planifica</span></li>'
+      + '<li><strong style="color:#2563eb;">Costa Rica:</strong> <span style="color:#334155;">Dario / David — Jivis (Artelec)</span></li>'
+      + '<li><strong style="color:#2563eb;">República Dominicana:</strong> <span style="color:#334155;">Andrés / Santiago</span></li>'
+      + '<li><strong style="color:#2563eb;">El Salvador:</strong> <span style="color:#334155;">Daniela / Gabriela</span></li>'
+      + '<li><strong style="color:#2563eb;">Guatemala:</strong> <span style="color:#334155;">Patricio / Eddison</span></li>'
+      + '<li><strong style="color:#2563eb;">Uruguay:</strong> <span style="color:#334155;">Karina / Julia</span></li>'
+      + '<li><strong style="color:#2563eb;">Panamá:</strong> <span style="color:#334155;">Vanessa / María Fernanda / Cata</span></li>'
+      + '<li><strong style="color:#2563eb;">Nicaragua:</strong> <span style="color:#334155;">Daniel / Lorena</span></li>'
+      + '<li><strong style="color:#2563eb;">Caribe:</strong> <span style="color:#334155;">María José / Isabel P.</span></li>'
+      + '</ul>'
+      + '</div>'
+},
 
 
+      
 { 
   name: '<span style="color:red; font-weight:bold;"> REFERENCIAL </span>',
   body: `<span style="color:red; font-weight:bold;"> </span>` 
