--- a/index.html
+++ b/index.html
@@ -933,6 +933,55 @@ COLINEAL CORPORATION CIA LTDA`
 },
 
 
+
+{
+  name: 'CODSAP ELECTROMENORES',
+  body: '<h3> Productos</h3>'
+      + '<table>'
+      + '<thead>'
+      + '<tr><th>Código</th><th>Descripción</th></tr>'
+      + '</thead>'
+      + '<tbody>'
+      + '<tr><td>10015039</td><td>BARRA DE SONIDO SUB37</td></tr>'
+      + '<tr><td>10026107</td><td>PARLANTE CMI40</td></tr>'
+      + '<tr><td>10026108</td><td>PARLANTE CMI70</td></tr>'
+      + '<tr><td>10026373</td><td>SANDUCHERA PANINI</td></tr>'
+      + '<tr><td>10026376</td><td>ASPIRADORA 3 EN 1</td></tr>'
+      + '<tr><td>10004071</td><td>ROBOT ASPIRADORA INTELIGENTE IND RAI-420</td></tr>'
+      + '<tr><td>10026371</td><td>AIRFRYER AFI 4.5L NG</td></tr>'
+      + '<tr><td>10000388</td><td>CAFETERA CAF-BCI 12 TAZAS</td></tr>'
+      + '<tr><td>10000019</td><td>CAFETERA MCI-CR CON MOLINO</td></tr>'
+      + '<tr><td>10008632</td><td>DISPEN CARGA INFERIOR DAI-5GCI RENOV</td></tr>'
+      + '<tr><td>10004979</td><td>SANIT FRUT Y VERD IND SFV 11IND IMP BLAN</td></tr>'
+      + '<tr><td>10000046</td><td>EXTRACTOR EI-CR JUGO INDURAMA</td></tr>'
+      + '<tr><td>10026370</td><td>AIRFRYER AFI 8L NG</td></tr>'
+      + '<tr><td>10026372</td><td>AIRFRYER AFI 4.2L NG</td></tr>'
+      + '<tr><td>10026377</td><td>HORNO TOSTADOR 10L</td></tr>'
+      + '<tr><td>10026375</td><td>HORNO TOSTADOR DOBLE PUERTA AF 25L CR</td></tr>'
+      + '<tr><td>10026374</td><td>HORNO PARA PIZZA A LA PIEDRA</td></tr>'
+      + '<tr><td>10000064</td><td>LICUADORA LI-CR LCD 1.5 L</td></tr>'
+      + '<tr><td>10000390</td><td>LICUADORA INOX LIC-PPC</td></tr>'
+      + '<tr><td>10000066</td><td>MICRO 20L MWI-20BL</td></tr>'
+      + '<tr><td>10000067</td><td>MICRO 20L MWI-20CR.</td></tr>'
+      + '<tr><td>10000070</td><td>MICRO 30L MWI-30CR</td></tr>'
+      + '<tr><td>10000352</td><td>MICRO 30L MWI-30NE</td></tr>'
+      + '<tr><td>10000354</td><td>OLLA ARROCERA CROMA 1.8 LTS</td></tr>'
+      + '<tr><td>10008660</td><td>PLANCHA BASICA PLUS PI-280</td></tr>'
+      + '<tr><td>10026113</td><td>VENTILADOR 3 EN 1</td></tr>'
+      + '<tr><td>10028858</td><td>BATIDORA MANUAL IND IBMCR24 CR 200W</td></tr>'
+      + '<tr><td>10028859</td><td>BATIDORA DE INMERSIÓN IND IBINE24 NE 300</td></tr>'
+      + '<tr><td>10028869</td><td>WAFLERA DOBLE IND IWAFCR24 CR 700W</td></tr>'
+      + '<tr><td>10028885</td><td>EXPRIMIDOR CÍTRICO IND IEJCR24 CR 85W</td></tr>'
+      + '<tr><td>10028886</td><td>TOSTADORA IND ITSNE24 CR 750W</td></tr>'
+      + '<tr><td>10028887</td><td>ESPUMADOR IND IELNE24 NE 500ML</td></tr>'
+      + '<tr><td>10028888</td><td>SANDUCHERA IND ISNE24 NE 2P</td></tr>'
+      + '<tr><td>10028889</td><td>HERVIDOR DE AGUA IND IHCR24 CR 1.7L</td></tr>'
+      + '</tbody>'
+      + '</table>'
+},
+
+
+
       
 { 
   name: '<span style="color:red; font-weight:bold;"> REFERENCIAL </span>',
