--- a/index.html
+++ b/index.html
@@ -119,8 +119,28 @@ dialog.viewer::backdrop{background:rgba(0,0,0,.7)}
 </head>
 <body>
   <div class="wrap">
-    <h2> Respuestas Rápidas <span id="count" class="pill"> </span> </h2>  
-    <span class="pill">Última actualización 13 octubre 2025 - 16:23 </span>
+
+ 
+
+<h2 class="titulo-sombra">Respuestas Rápidas</h2>
+
+<style>
+.titulo-sombra{
+  text-align:center;
+  color:#fff;
+  font-weight:800;
+  font-size:clamp(22px,3vw,32px);
+  text-shadow:
+    0 1px 0 rgba(0,0,0,.35),
+    0 4px 12px rgba(0,0,0,.35),
+    0 0 12px rgba(255,255,255,.15);
+}
+</style>
+
+
+
+
+    <span class="pill">Última actualización 13 octubre 2025 - 16:23 </span> <span id="count" class="pill"> </span>
 
     <p class="muted">Escribe una palabra (ejemplo: <em>garantía</em>, <em>Perú</em>, <em>orden</em>, <em>no contactabilidad</em>).</p>
 
@@ -133,8 +153,23 @@ dialog.viewer::backdrop{background:rgba(0,0,0,.7)}
 
     
  
+<style>
+@keyframes mover {
+  0% { transform: translateX(10px); }
+  50% { transform: translateX(-10px); }
+  100% { transform: translateX(10px); }
+}
+h5 {
+  font-family: system-ui, sans-serif;
+  text-align: center;
+  animation: mover 6s ease-in-out infinite;
+  color: #e5e7eb;
+  letter-spacing: .5px;
+}
+</style>
 
-<h5> ⚠️ Atajos </h5>
+<h5>⚠️ Atajos</h5>
+
 
 <div class="notices">
 
@@ -176,6 +211,12 @@ dialog.viewer::backdrop{background:rgba(0,0,0,.7)}
     NOVEDADES CONTACT
   </a>
 
+ <a class="pill" 
+     href=" https://usertestcc.github.io/boletin_tecnicos/  " 
+     target="_blank" 
+     rel="noopener noreferrer">
+    TÉCNICOS
+  </a>
 
 </div>
 
@@ -234,6 +275,8 @@ dialog.viewer::backdrop{background:rgba(0,0,0,.7)}
   body: `Hola soy ___ , asesor de servicio técnico Indurama. Su producto se encuentra fuera de garantía, la visita tendrá un costo de 25 dólares, más
 los valores por repuestos o mano de obra que nuestro técnico le indique en la visita.
 ¿Desea agendar la orden de servicio?` },
+
+
 
 // CONTENIDO
 { name: 'Orden dentro de garantía',
