--- a/index.html
+++ b/index.html
@@ -345,7 +345,19 @@ Estaremos gustosos de servirle. ¡Que tenga un excelente día!` },
   body: `Lamentamos informarle que el tiempo de espera terminó. Si desea contactarnos puede comunicarse, de lunes a viernes de 08:00 am a 17:00 pm, y sábados de 08:00 am a 13:00 pm.
 Estaremos gustosos de servirle. ¡Que tenga un excelente día!` },
 
+{
+  name: 'Mayor a 5 años',
+  body: `Estimado cliente:
+Por el momento no disponemos del repuesto para el modelo de su producto, por favor su gentil ayuda con sus datos para contactarnos una vez tengamos disponibilidad.  
 
+Indurama agradece su comprensión y preferencia.
+
+Datos de contacto:
+- Nombres y apellidos:
+- Teléfono de contacto:
+- Producto y modelo (Ejemplo: COCINA HAMBURGO ):
+- Descripción del problema:`
+},
 
 //NOCONTACTABILIDAD
 
