--- a/index.html
+++ b/index.html
@@ -212,10 +212,10 @@ h5 {
   </a>
 
  <a class="pill" 
-     href=" https://usertestcc.github.io/boletin_tecnicos/  " 
+     href=" https://usertestcc.github.io/adecuaciones_boletin/ " 
      target="_blank" 
      rel="noopener noreferrer">
-    TÉCNICOS
+    ADECUACIONES
   </a>
 
 </div>
