--- a/index.html
+++ b/index.html
@@ -807,7 +807,13 @@ COLINEAL CORPORATION CIA LTDA`
 
 
 //campanas
+{
+  name: 'ADECUACION CEI',
+  body: `Estimado cliente recuerde que debe tener la estructura colocada para que nuestros técnicos puedan empotrar el producto.  
 
+ <img src="CEI.jpeg" alt="Campana extractora CEI">`
+}, 
+ 
 
   {
     name: 'CAMPANA EXTRACTORA CEI-90VDNRC',
