--- a/index.html
+++ b/index.html
@@ -809,7 +809,9 @@ COLINEAL CORPORATION CIA LTDA`
 //campanas
 {
   name: 'ADECUACION CEI',
-  body: `Estimado cliente recuerde que debe tener la estructura colocada para que nuestros técnicos puedan empotrar el producto.  
+  body: `Estimado cliente Le recordamos que es indispensable contar con la estructura metálica previamente instalada, tal como se muestra en la imagen, para que nuestros técnicos puedan empotrar correctamente el producto y garantizar una instalación segura y estética.
+
+De esta manera, el proceso será más ágil y evitaremos contratiempos durante la visita técnica.
 
  <img src="CEI.jpeg" alt="Campana extractora CEI">`
 }, 
