--- a/index.html
+++ b/index.html
@@ -808,12 +808,10 @@ COLINEAL CORPORATION CIA LTDA`
 
 //campanas
 {
-  name: 'ADECUACION CEI',
-  body: `Estimado cliente Le recordamos que es indispensable contar con la estructura metálica previamente instalada, tal como se muestra en la imagen, para que nuestros técnicos puedan empotrar correctamente el producto y garantizar una instalación segura y estética.
+  name: 'Campana Tipo Isla - Estructura',
+  body: ` 
 
-De esta manera, el proceso será más ágil y evitaremos contratiempos durante la visita técnica.
-
- <img src="CEI.jpeg" alt="Campana extractora CEI">`
+ <img src="Campana tipo Isla.png" alt="Campana extractora CEI">`
 }, 
 
       {
