--- a/index.html
+++ b/index.html
@@ -811,7 +811,7 @@ COLINEAL CORPORATION CIA LTDA`
   name: 'Campana Tipo Isla - Estructura',
   body: ` 
 
- <img src="Campana tipo Isla.png" alt="Campana extractora CEI">`
+ <img src="90CRVI.png" alt="Campana extractora CEI">`
 }, 
 
       {
