--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@ COLINEAL CORPORATION CIA LTDA`
 
 //campanas
 {
-  name: 'Campana Tipo Isla - Estructura',
+  name: 'CEI-90CRVI - ADECUACION',
   body: ` 
 
  <img src="90CRVI.png" alt="Campana extractora CEI">`
