--- a/index.html
+++ b/index.html
@@ -1472,49 +1472,85 @@ Avenida de la Cultura, Plaza Comercial Ecopark, Galpón 105
 },
 
    
+ 
 {
   name: 'IMPORTANTE - BOLETÍN CONTACT CENTER',
-wide: true,
-  body: '<div style="font-family:Georgia, Times, serif; line-height:1.6; color:#1f2937; padding:16px; border:1px solid #d1d5db; border-radius:8px; box-shadow:0 6px 30px rgba(0,0,0,.08); background: \
-    radial-gradient(circle at 20% 15%, rgba(0,0,0,.025) 0 12%, transparent 13%) 0 0/180px 180px, \
-    radial-gradient(circle at 80% 60%, rgba(0,0,0,.02) 0 10%, transparent 11%) 0 0/220px 220px, \
-    linear-gradient(#f5f5f0,#f3f3ed);">\
-    <div style="text-align:center; letter-spacing:.5px; margin-bottom:10px;">\
-      <div style="font-size:22px; font-weight:700; text-transform:uppercase;">Boletín Contact Center</div>\
-      <div style="font-size:12px; color:#6b7280; margin-top:2px;"></div>\
-    </div>\
-    <hr style="border:0; border-top:2px solid #111; margin:6px 0 14px;">\
-    <div style="column-count:1; column-gap:24px;">\
-      <h4 style="margin:0 0 6px; font-size:16px; text-transform:uppercase; letter-spacing:.8px;">Distribución LATAM</h4>\
-      <p style="margin:0 0 10px;">\
-        <strong>Maycol Herrera</strong> — <a href="mailto:mherrerab@indurama.com" style="color:inherit; text-decoration:none;">mherrerab@indurama.com</a><br>\
-        • Colombia · República Dominicana · El Salvador<br>\
-        <strong>Cristina Gárate</strong> — <a href="mailto:cgarate@indurama.com" style="color:inherit; text-decoration:none;">cgarate@indurama.com</a><br>\
-        • Uruguay · Guatemala · Nicaragua · Panamá · Costa Rica · Bolivia · Honduras\
-      </p>\
-      <hr style="border:0; border-top:1px solid #9ca3af; margin:10px 0 12px;">\
-      <h4 style="margin:0 0 6px; font-size:16px; text-transform:uppercase; letter-spacing:.8px;">Canales de contacto según origen de compra</h4>\
-      <ul style="margin:0 0 10px; padding-left:18px;">\
-        <li>Compra en <strong>Indurama.com</strong> (web): <strong>0984001934</strong>.</li>\
-        <li>Compra por <strong>WhatsApp</strong>: <strong>0999303030</strong>.</li>\
-      </ul>\
-      <hr style="border:0; border-top:1px dashed #b6b6b6; margin:10px 0 12px;">\
-      <h4 style="margin:0 0 6px; font-size:16px; text-transform:uppercase; letter-spacing:.8px;">Diferenciación del tipo de compra (factura)</h4>\
-      <p style="margin:0 0 10px;">\
-        — Revisar el campo “Observaciones” de la factura.<br>\
-        — Si aparece un <strong>número de pedido</strong> ⇒ <strong>Venta interna</strong>.<br>\
-        — Si <strong>no</strong> tiene número de pedido (ej.: “Venta CC Recreo”) ⇒ <strong>Venta externa</strong>.\
-      </p>\
-      <hr style="border:0; border-top:1px dotted #b6b6b6; margin:10px 0 12px;">\
-      <h4 style="margin:0 0 6px; font-size:16px; text-transform:uppercase; letter-spacing:.8px;">Instalaciones gratuitas</h4>\
-      <p style="margin:0;">\
-        — Todos los productos comprados en <strong>eCommerce</strong> e <strong>islas</strong> tienen instalación <strong>gratuita</strong>.<br>\
-        — Si es <strong>foráneo</strong>, aplica costo de <strong>movilización</strong>.\
-      </p>\
-    </div>\
-  </div>'
-},
+  wide: true,
+  body: `
+    <div style="
+      font-family:Arial, sans-serif;
+      line-height:1.5;
+      color:#1f2937;
+      padding:16px;
+      border:1px solid #d1d5db;
+      border-radius:8px;
+      background:#ffffff;
+    ">
+      <div style="text-align:center; letter-spacing:.5px; margin-bottom:10px;">
+        <div style="font-size:20px; font-weight:700; text-transform:uppercase;">
+          Boletín Contact Center
+        </div>
+      </div>
 
+      <hr style="border:0; border-top:2px solid #111; margin:6px 0 14px;">
+
+      <div>
+        <h4 style="margin:0 0 6px; font-size:15px; text-transform:uppercase;">Distribución LATAM</h4>
+        <p style="margin:0 0 10px;">
+          <strong>Maycol Herrera</strong> — 
+          <a href="mailto:mherrerab@indurama.com" style="color:inherit; text-decoration:none;">mherrerab@indurama.com</a><br>
+          • Colombia · República Dominicana · El Salvador<br>
+          <strong>Cristina Gárate</strong> — 
+          <a href="mailto:cgarate@indurama.com" style="color:inherit; text-decoration:none;">cgarate@indurama.com</a><br>
+          • Uruguay · Guatemala · Nicaragua · Panamá · Costa Rica · Bolivia · Honduras
+        </p>
+
+        <hr style="border:0; border-top:1px solid #9ca3af; margin:10px 0 12px;">
+
+        <h4 style="margin:0 0 6px; font-size:15px; text-transform:uppercase;">Canales de contacto según origen de compra</h4>
+        <ul style="margin:0 0 10px; padding-left:18px;">
+          <li>Compra en <strong>Indurama.com</strong> (web): <strong>0984001934</strong>.</li>
+          <li>Compra por <strong>WhatsApp</strong>: <strong>0999303030</strong>.</li>
+        </ul>
+
+        <hr style="border:0; border-top:1px dashed #b6b6b6; margin:10px 0 12px;">
+
+        <h4 style="margin:0 0 6px; font-size:15px; text-transform:uppercase;">Diferenciación del tipo de compra (factura)</h4>
+        <p style="margin:0 0 10px;">
+          — Revisar el campo “Observaciones” de la factura.<br>
+          — Si aparece un <strong>número de pedido</strong> ⇒ <strong>Venta interna</strong>.<br>
+          — Si <strong>no</strong> tiene número de pedido (ej.: “Venta CC Recreo”) ⇒ <strong>Venta externa</strong>.
+        </p>
+
+        <hr style="border:0; border-top:1px dotted #b6b6b6; margin:10px 0 12px;">
+
+        <h4 style="margin:0 0 6px; font-size:15px; text-transform:uppercase;">Instalaciones gratuitas</h4>
+        <p style="margin:0 0 12px;">
+          — Todos los productos comprados en <strong>eCommerce</strong> e <strong>islas</strong> tienen instalación <strong>gratuita</strong>.<br>
+          — Si es <strong>foráneo</strong>, aplica costo de <strong>movilización</strong>.
+        </p>
+
+        <hr style="border:0; border-top:1px solid #9ca3af; margin:12px 0;">
+
+        <h4 style="margin:0 0 6px; font-size:15px; text-transform:uppercase; color:#b91c1c;">
+          Importante
+        </h4>
+        <p style="margin:0;">
+          <strong>No generar tickets para los siguientes modelos:</strong><br>
+          PRAGA · BRESIA · OVIEDO · HAMBURGO · EI-4PVI60 (modelo antiguo) · GINEBRA (cocina de inducción)<br><br>
+
+          <strong>Aplica para:</strong><br>
+          Productos con más de 5 años de fabricación.<br>
+          Modelos correspondientes a los años <strong>2000–2019</strong>.<br><br>
+
+          <strong>Indicaciones:</strong><br>
+          No brindar explicaciones sobre repuestos, modelos o tiempos.<br>
+          Mantener la comunicación <strong>breve, clara y concreta</strong>.
+        </p>
+      </div>
+    </div>
+  `
+},
 
 
 
