--- a/index.html
+++ b/index.html
@@ -1537,11 +1537,11 @@ Avenida de la Cultura, Plaza Comercial Ecopark, Galpón 105
         </h4>
         <p style="margin:0;">
           <strong>No generar tickets para los siguientes modelos:</strong><br>
-          PRAGA · BRESIA · OVIEDO · HAMBURGO · EI-4PVI60 (modelo antiguo) · GINEBRA (cocina de inducción)<br><br>
+          PRAGA · BRESIA · OVIEDO · HAMBURGO · GINEBRA · EI-4PVI60 (modelo antiguo) ·  <br>
 
           <strong>Aplica para:</strong><br>
           Productos con más de 5 años de fabricación.<br>
-          Modelos correspondientes a los años <strong>2000–2019</strong>.<br><br>
+          Modelos correspondientes a los años <strong>2000–2019</strong>.<br> 
 
           <strong>Indicaciones:</strong><br>
           No brindar explicaciones sobre repuestos, modelos o tiempos.<br>
