--- a/index.html
+++ b/index.html
@@ -815,12 +815,10 @@ COLINEAL CORPORATION CIA LTDA`
 }, 
 
       {
-  name: 'ADECUACION CEI',
-  body: `Estimado cliente Le recordamos que es indispensable contar con la estructura metálica previamente instalada, tal como se muestra en la imagen, para que nuestros técnicos puedan empotrar correctamente el producto y garantizar una instalación segura y estética.
+  name: 'IMPACTO PROYECTO',
+  body: ` 
 
-De esta manera, el proceso será más ágil y evitaremos contratiempos durante la visita técnica.
-
- <img src="  boletin_oct_1.jpg   " alt="Campana extractora CEI">`
+ <img src="  boletin_oct_1.jpg   " alt="IMPACTO">`
 }, 
  
 
