--- a/index.html
+++ b/index.html
@@ -818,7 +818,7 @@ COLINEAL CORPORATION CIA LTDA`
   name: 'IMPACTO PROYECTO',
   body: ` 
 
- <img src="  boletin_oct_1.jpg   " alt="IMPACTO">`
+ <img src="  AREA.jpg   " alt="IMPACTO">`
 }, 
  
 
