--- a/index.html
+++ b/index.html
@@ -1469,7 +1469,125 @@ Avenida de la Cultura, Plaza Comercial Ecopark, Galpón 105
    `
 },
 
-   
+   //codigossap
+
+
+{ name: 'HORNOS',
+  body:
+    '10000401 – HEI-75EN\n-----------------------------------\n' +
+    '10000400 – HEI-75GN\n-----------------------------------\n' +
+    '10000343 – HEI-75END\n-----------------------------------\n' +
+    '10000402 – HEI-75ENDF'
+},
+
+{ name: 'TELEVISORES',
+  body:
+    '10033945 – 32TIKGF5HD Google Tv 5.0\n-----------------------------------\n' +
+    '30001009 – 32TIKGF2HD Android 11.0\n-----------------------------------\n' +
+    '30000910 – 32TISE20AHD1\n-----------------------------------\n' +
+    '10027716 – 32TIKUHD Portatil Google TV\n-----------------------------------\n' +
+    '10027707 – 32TIKHD Google Tv\n-----------------------------------\n' +
+    '10012168 – 43TIKFCFHD\n-----------------------------------\n' +
+    '10012169 – 43TIKGFUHD4K\n-----------------------------------\n' +
+    '10021832 – 43TIKJUHD Google Tv\n-----------------------------------\n' +
+    '10020945 – 43TIKF9UHD Android 11.0\n-----------------------------------\n' +
+    '10020946 – 50TIKGF2UHD Android 11.0\n-----------------------------------\n' +
+    '10012170 – 50TIKGFUHD4K\n-----------------------------------\n' +
+    '10004053 – 50TISG3AUHD\n-----------------------------------\n' +
+    '10021833 – 50TIKGF2GUHD Google Tv\n-----------------------------------\n' +
+    '10004054 – 55TISG3AUHD\n-----------------------------------\n' +
+    '10036494 – 55TISG4FQLED Google Tv\n-----------------------------------\n' +
+    '10033823 – 65TIKGF5QLED Google Tv 5.0\n-----------------------------------\n' +
+    '10020951 – 65TISQ20UHD'
+},
+
+{ name: 'LAVADORAS',
+ 
+  body:
+    '10000385 – SEMIAUT LRI-13BLSA DOBLE TINA\n-----------------------------------\n' +
+    '10000302 – SEMIAUTOMATICA LRI-11BLSA\n-----------------------------------\n' +
+    '10000062 – SEMIAUTO LRI-15BLSA\n-----------------------------------\n' +
+    '10030705 – AUTOMATICA LRI-16DGR\n-----------------------------------\n' +
+    '10000393 – AUTOMATICA LRI-16BLA\n-----------------------------------\n' +
+    '10000386 – AUTOMATICA LRI-19BLA\n-----------------------------------\n' +
+    '10026406 – AUTOMATICA LRI-19DGRI S01\n-----------------------------------\n' +
+    '10028469 – AUTOMATICA LRI-17DGR\n-----------------------------------\n' +
+    '10035872 – AUTOMÁTICA LRI-22DGR\n-----------------------------------\n' +
+    '10008621 – AUTOMATICA LRI-21FCR\n-----------------------------------\n' +
+    '10030930 – AUTOMATICA LRI-19CRPF\n-----------------------------------\n' +
+    '10030931 – AUTOMATICA LRI-21CRPF\n-----------------------------------\n' +
+    '10033203 – AUTOMÁTICA LRI-18CRPP\n-----------------------------------\n' +
+    '10033215 – AUTOMÁTICA LRI-22CRPP\n-----------------------------------\n' +
+    '10033216 – AUTOMÁTICA LRI-24CRPP'
+},
+
+
+{ name: 'CAMPANAS EXTRACTORAS',
+  body:
+    '10000024 – CAMPANA EXTRACTORA CEI-90CRP\n-----------------------------------\n' +
+    '10000030 – CAMPANA EXTRACTORA CEI-90CRVI\n-----------------------------------\n' +
+    '10000031 – CAMPANA EXTRACTORA CEI-90NEVC\n-----------------------------------\n' +
+    '10000032 – CAMPANA EXTRACTORA CEI-90NMO\n-----------------------------------\n' +
+    '10008500 – CAMPANA EXTRACTORA CEI-90CRVC\n-----------------------------------\n' +
+    '10000144 – CAMPANA EXTRACTORA CEI-75CRP\n-----------------------------------\n' +
+    '10000022 – CAMPANA EXTRACTORA CEI-60CRP CB TA'
+},
+
+{ name: 'AIRE ACONDICIONADO',
+  body:
+    'ASI-124A TIPO A – 10007693\n-----------------------------------\n' +
+    'ASI-124I TIPO A – 10007695\n-----------------------------------\n' +
+    'ASI-124I TIPO A – 10007695\n-----------------------------------\n' +
+    'ASI-244I TIPO A – 10007699\n-----------------------------------\n' +
+    'ASI-244A TIPO A – 10007697\n-----------------------------------\n' +
+    'ASI-125A TIPO A – 10026114\n-----------------------------------\n' +
+    'ASI-185A TIPO A – 10026115\n-----------------------------------\n' +
+    'ASI-365A TIPO A – 10026116\n-----------------------------------\n' +
+    'ASI-121I – 10034533'
+},
+
+{ name: 'ELECTROMENORES (1 de 2)',
+  body:
+    '10015039 – BARRA DE SONIDO SUB37\n-----------------------------------\n' +
+    '10026107 – PARLANTE CMI40\n-----------------------------------\n' +
+    '10026108 – PARLANTE CMI70\n-----------------------------------\n' +
+    '10026373 – SANDUCHERA PANINI\n-----------------------------------\n' +
+    '10026376 – ASPIRADORA 3 EN 1\n-----------------------------------\n' +
+    '10004071 – ROBOT ASPIRADORA INTELIGENTE IND RAI-420\n-----------------------------------\n' +
+    '10026371 – AIRFRYER AFI 4.5L NG\n-----------------------------------\n' +
+    '10000388 – CAFETERA CAF-BCI 12 TAZAS\n-----------------------------------\n' +
+    '10000019 – CAFETERA MCI-CR CON MOLINO\n-----------------------------------\n' +
+    '10008632 – DISPEN CARGA INFERIOR DAI-5GCI RENOV\n-----------------------------------\n' +
+    '10004979 – SANIT FRUT Y VERD IND SFV 11IND IMP BLAN\n-----------------------------------\n' +
+    '10000046 – EXTRACTOR EI-CR JUGO INDURAMA\n-----------------------------------\n' +
+    '10026370 – AIRFRYER AFI 8L NG\n-----------------------------------\n' +
+    '10026372 – AIRFRYER AFI 4.2L NG\n-----------------------------------\n' +
+    '10026377 – HORNO TOSTADOR 10L\n-----------------------------------\n' +
+    '10026375 – HORNO TOSTADOR DOBLE PUERTA AF 25L CR\n-----------------------------------\n' +
+    '10026374 – HORNO PARA PIZZA A LA PIEDRA'
+},
+
+{ name: 'ELECTROMENORES (2 de 2)',
+  body:
+    '10000064 – LICUADORA LI-CR LCD 1.5 L\n-----------------------------------\n' +
+    '10000390 – LICUADORA INOX LIC-PPC\n-----------------------------------\n' +
+    '10000066 – MICRO 20L MWI-20BL\n-----------------------------------\n' +
+    '10000067 – MICRO 20L MWI-20CR\n-----------------------------------\n' +
+    '10000070 – MICRO 30L MWI-30CR\n-----------------------------------\n' +
+    '10000352 – MICRO 30L MWI-30NE\n-----------------------------------\n' +
+    '10000354 – OLLA ARROCERA CROMA 1.8 LTS\n-----------------------------------\n' +
+    '10008660 – PLANCHA BASICA PLUS PI-280\n-----------------------------------\n' +
+    '10026113 – VENTILADOR 3 EN 1\n-----------------------------------\n' +
+    '10028858 – BATIDORA MANUAL IND IBMCR24 CR 200W\n-----------------------------------\n' +
+    '10028859 – BATIDORA DE INMERSIÓN IND IBINE24 NE 300\n-----------------------------------\n' +
+    '10028869 – WAFLERA DOBLE IND IWAFCR24 CR 700W\n-----------------------------------\n' +
+    '10028885 – EXPRIMIDOR CÍTRICO IND IEJCR24 CR 85W\n-----------------------------------\n' +
+    '10028886 – TOSTADORA IND ITSNE24 CR 750W\n-----------------------------------\n' +
+    '10028887 – ESPUMADOR IND IELNE24 NE 500ML\n-----------------------------------\n' +
+    '10028888 – SANDUCHERA IND ISNE24 NE 2P\n-----------------------------------\n' +
+    '10028889 – HERVIDOR DE AGUA IND IHCR24 CR 1.7L'
+},
+
  
 {
   name: 'IMPORTANTE - BOLETÍN CONTACT CENTER',
